--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "flask>=3.0.0",
     "flask-babel>=4.0.0",
     "Pillow>=10.0.0",
+    "PyYAML>=6.0.0",
 ]
 
 [project.optional-dependencies]
