--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "flask-babel>=4.0.0",
     "Pillow>=10.0.0",
     "PyYAML>=6.0.0",
+    "numpy>=1.24.0",
 ]
 
 [project.optional-dependencies]
@@ -54,8 +55,8 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.wheel]
 packages = ["src/badweathermounttester"]
 
-[tool.uv]
-dev-dependencies = [
+[dependency-groups]
+dev = [
     "pytest>=7.0.0",
     "pytest-cov>=4.0.0",
     "ruff>=0.1.0",
