--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "Pillow>=10.0.0",
     "PyYAML>=6.0.0",
     "numpy>=1.24.0",
+    "waitress>=3.0.0",
 ]
 
 [project.optional-dependencies]
