--- a/setup.yml
+++ b/setup.yml
@@ -1,13 +1,18 @@
 mount:
   latitude: 51.1167
   focal_length_mm: 420.0
-  distance_to_screen_m: 3.5
+  distance_to_screen_m: 3.41
   main_period_seconds: 480.0
+  telescope_offset_m: 0.27
+  angle_start_deg: 0.0
+  angle_stop_deg: -10.0
+  declination_deg: -38.0
 display:
   fullscreen: true
   screen_width: 1920
   screen_height: 1080
   screen_width_mm: 520.0
+  screen_height_mm: 293.0
   star_size: 3
   star_brightness: 255
   target_y_ratio: 0.5
