--- a/setup.yml
+++ b/setup.yml
@@ -1,6 +1,6 @@
 mount:
   latitude: 51.1167
-  focal_length_mm: 420.0
+  focal_length_mm: 210.0
   distance_to_screen_m: 3.41
   main_period_seconds: 480.0
   telescope_offset_m: 0.27
@@ -9,11 +9,10 @@ mount:
   angle_stop_deg: -10.0
   declination_deg: -38.0
 display:
-  fullscreen: true
+  fullscreen: false
   screen_width: 1920
-  screen_height: 1080
+  screen_height: 1200
   screen_width_mm: 520.0
-  screen_height_mm: 293.0
   star_size: 3
   star_brightness: 255
   target_y_ratio: 0.5
@@ -21,33 +20,49 @@ server:
   host: 0.0.0.0
   port: 5000
 camera:
-  pixel_size_um: 2.4
-  width_px: 3072
-  height_px: 2048
+  pixel_size_um: 3.75
+  width_px: 1280
+  height_px: 960
 calibration:
   points:
-  - - 85
-    - 799
-  - - 249
-    - 677
-  - - 393
-    - 641
-  - - 807
-    - 586
-  - - 1160
+  - - 15
+    - 601
+  - - 135
+    - 594
+  - - 246
+    - 584
+  - - 373
+    - 583
+  - - 490
+    - 580
+  - - 593
+    - 578
+  - - 690
+    - 576
+  - - 799
+    - 575
+  - - 957
+    - 574
+  - - 1069
+    - 574
+  - - 1227
+    - 577
+  - - 1328
+    - 579
+  - - 1414
+    - 580
+  - - 1542
+    - 585
+  - - 1671
+    - 590
+  - - 1791
     - 596
-  - - 1482
-    - 645
-  - - 1648
-    - 713
-  - - 1799
-    - 795
-  - - 1883
-    - 856
+  - - 1904
+    - 603
   is_complete: false
 velocity:
-  left_time_seconds: null
-  middle_time_seconds: null
-  right_time_seconds: null
+  left_time_seconds: 171.14839999997616
+  middle_time_seconds: 176.7655
+  right_time_seconds: 177.39240000009536
   stripe_width_pixels: 128
-  is_complete: false
+  is_complete: true
