--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ packages = ["src/badweathermounttester"]
 
 [dependency-groups]
 dev = [
+    "flake8>=7.0.0",
     "pytest>=7.0.0",
     "pytest-cov>=4.0.0",
     "ruff>=0.1.0",
