--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,31 +9,94 @@ permissions:
   contents: write
 
 jobs:
+  build:
+    strategy:
+      matrix:
+        include:
+          - os: ubuntu-latest
+            artifact_name: bwmt-linux
+          - os: windows-latest
+            artifact_name: bwmt-windows
+          - os: macos-latest
+            artifact_name: bwmt-macos
+
+    runs-on: ${{ matrix.os }}
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Install uv
+      uses: astral-sh/setup-uv@v5
+
+    - name: Set up Python 3.10
+      run: uv python install 3.10
+
+    - name: Install dependencies
+      run: uv sync --dev
+
+    - name: Lint with flake8
+      run: |
+        uv run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+
+    - name: Run tests
+      run: uv run pytest
+
+    - name: Build with PyInstaller
+      run: |
+        uv run pyinstaller --name bwmt --onedir --collect-all badweathermounttester src/badweathermounttester/app.py
+
+    - name: Create archive (Linux/macOS)
+      if: runner.os != 'Windows'
+      run: |
+        cd dist
+        tar -czvf ${{ matrix.artifact_name }}.tar.gz bwmt
+
+    - name: Create archive (Windows)
+      if: runner.os == 'Windows'
+      run: |
+        cd dist
+        Compress-Archive -Path bwmt -DestinationPath ${{ matrix.artifact_name }}.zip
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: ${{ matrix.artifact_name }}
+        path: dist/${{ matrix.artifact_name }}.*
+
   release:
+    needs: build
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Install uv
       uses: astral-sh/setup-uv@v5
+
     - name: Set up Python 3.10
       run: uv python install 3.10
+
     - name: Install dependencies
       run: uv sync --dev
-    - name: Lint with flake8
-      run: |
-        uv run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-    - name: Run tests
-      run: uv run pytest
+
     - name: Extract version from tag
       id: version
       run: echo "VERSION=${GITHUB_REF_NAME#release-}" >> "$GITHUB_OUTPUT"
+
     - name: Build package
       run: uv build
+
+    - name: Download all artifacts
+      uses: actions/download-artifact@v4
+      with:
+        path: artifacts
+
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v2
       with:
         name: v${{ steps.version.outputs.VERSION }}
         tag_name: ${{ github.ref_name }}
         generate_release_notes: true
-        files: dist/*
+        files: |
+          dist/*
+          artifacts/**/*
