--- a/zensical.toml
+++ b/zensical.toml
@@ -18,9 +18,12 @@ nav = [
 ]
 
 [project.markdown_extensions.admonition]
+[project.markdown_extensions.attr_list]
 [project.markdown_extensions.footnotes]
-[project.markdown_extensions.pymdownx.details]
+[project.markdown_extensions.md_in_html]
+[project.markdown_extensions.pymdownx.blocks.caption]
 [project.markdown_extensions.pymdownx.caret]
+[project.markdown_extensions.pymdownx.details]
 [project.markdown_extensions.pymdownx.keys]
 [project.markdown_extensions.pymdownx.mark]
 [project.markdown_extensions.pymdownx.tilde]
