--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,7 @@ on:
 
 permissions:
   contents: write
+  id-token: write
 
 jobs:
   build:
@@ -91,6 +92,12 @@ jobs:
       with:
         path: artifacts
 
+    - name: Upload dist as artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: python-dist
+        path: dist/
+
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v2
       with:
@@ -100,3 +107,20 @@ jobs:
         files: |
           dist/*
           artifacts/**/*
+
+  publish-pypi:
+    needs: release
+    runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/p/badweathermounttester
+
+    steps:
+    - name: Download dist artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: python-dist
+        path: dist/
+
+    - name: Publish to PyPI
+      uses: pypa/gh-action-pypi-publish@release/v1
