--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,7 @@ on:
 permissions:
   contents: write
   id-token: write
+  pages: write
 
 jobs:
   build:
@@ -87,9 +88,10 @@ jobs:
     - name: Build package
       run: uv build
 
-    - name: Download all artifacts
+    - name: Download binary artifacts
       uses: actions/download-artifact@v4
       with:
+        pattern: bwmt-*
         path: artifacts
 
     - name: Upload dist as artifact
@@ -105,8 +107,42 @@ jobs:
         tag_name: ${{ github.ref_name }}
         generate_release_notes: true
         files: |
-          dist/*
+          dist/*.whl
+          dist/*.tar.gz
           artifacts/**/*
+
+  publish-docs:
+    needs: release
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    steps:
+    - uses: actions/configure-pages@v4
+
+    - uses: actions/checkout@v4
+
+    - name: Install uv
+      uses: astral-sh/setup-uv@v5
+
+    - name: Set up Python 3.10
+      run: uv python install 3.10
+
+    - name: Install dependencies
+      run: uv sync --dev
+
+    - name: Build documentation
+      run: uv run zensical build --clean
+
+    - name: Upload pages artifact
+      uses: actions/upload-pages-artifact@v4
+      with:
+        path: site/
+
+    - id: deployment
+      name: Deploy to GitHub Pages
+      uses: actions/deploy-pages@v4
 
   publish-pypi:
     needs: release
