--- a/babel.cfg
+++ b/babel.cfg
@@ -1,4 +1,3 @@
 # Babel extraction configuration
-[python: src/**.py]
-[jinja2: src/**/templates/**.html]
-extensions=jinja2.ext.autoescape,jinja2.ext.with_
+[python: **.py]
+[jinja2: **/templates/**.html]
